worked on nav, need help with spacing

--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <nav id="nav"></nav>
+    <nav id="nav">
+      <a href="" id="etsy">Etsy</a>
+      <input id="searchBar" type="text" name="" placeholder="" />
+      <div id="navTitles"></div>
+    </nav>
+
+    <div id="picBox"></div>
 
     <div id="grid">
+      <!-- <div class="product"></div>
       <div class="product"></div>
       <div class="product"></div>
       <div class="product"></div>
       <div class="product"></div>
-      <div class="product"></div>
-      <div class="product"></div>
+      <div class="product"></div> -->
     </div>
 
     <footer id="footer"></footer>
