--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     <nav id="nav">
       <a href="" id="etsy">Etsy</a>
       <input id="searchBar" type="text" name="" placeholder="" />
-      <div id="navTitles"></div>
+      <div id="navTitles">
+        <!-- <li>Valentine's Day</li>
+        <li>Jewelry & Accessories</li> -->
+        <div class="dropDown">
+          <ul>
+            <span class="dropdown-item-label">Accessories</span>
+          </ul>
+        </div>
+        <!-- <li>Clothing</li>
+        <li>Home & Living</li>
+        <li>Wedding & Party</li>
+        <li>Toys & Entertainment</li>
+        <li>Art & Collectibles</li>
+        <li>Craft & Supplies</li>
+        <li>Gifts & Gift Cards</li> -->
+      </div>
     </nav>
 
     <div id="picBox"></div>
