attempted to update hover and stars

--- a/index.html
+++ b/index.html
@@ -13,9 +13,28 @@
       <div id="navTitles">
         <!-- <li>Valentine's Day</li>
         <li>Jewelry & Accessories</li> -->
-        <div class="dropDown">
+        <div class="dropdown">
           <ul>
-            <span class="dropdown-item-label">Accessories</span>
+            <li class="item-drop-down">
+            <span class="dropdown-item-label">All Jewelry & Accessories</span>
+            </li>
+
+            <li class="item-drop-down">
+              <span class="dropdown-item-label">Accessories</span>
+              <div class ="dropdown-block">
+                <h3>Hats & Caps</h3>
+                <span>Beenies & Winter Hats</span>
+              </div>
+            </li>
+             
+              <span class="dropdown-item-label">Bags & purses</span>
+              <span class="dropdown-item-label">Necklaces</span>
+              <span class="dropdown-item-label">Rings</span>
+              <span class="dropdown-item-label">Earrings</span>
+              <span class="dropdown-item-label">Bracelets</span>
+              <span class="dropdown-item-label">Body Jewelry</span>
+              <span class="dropdown-item-label">All Jewelry</span>
+            </li>
           </ul>
         </div>
         <!-- <li>Clothing</li>
